# dj-library-manager

./: .coverage  .dockerignore  .env.example  .gitignore  AI_COLLAB_GUIDE.md  README.md  apply.command  audio_debug_summary.md  audio_repair_log.md  config.local.yml.backup  config.yml  djlib_http_cache.sqlite  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  rules.yml  run.py  scan.command  taxonomy.local.20251109-134310.yml  taxonomy.local.yml  taxonomy.yml  taxonomy_map.yml  taxonomy_suggestions.yml
LOGS/: library_edit.xlsx
djlib/: __init__.py  buckets.py  classify.py  cli.py  config.py  csvdb.py  enrich.py  extern.py  filename.py  fingerprint.py  genre.py  mover.py  ops.py  paths.py  placement.py  tags.py  taxonomy.py  unsorted.py  web_launch.py  webapp.py
docker/: Dockerfile.essentia
docs/: ARCHITECTURE.md  BUCKETING_LEGACY.md  INSTALL.md  Koncepcja_UX_UI_DJ_Library_Manager__Dokument_Strategiczny.md  ML_PIPELINE.md  QUICK_REFERENCE.md  README.md  ROADMAP_essentia_plan.md  SYSTEM_PROMPT_SNIPPET.md  auto_bucket_module_plan.md  auto_bucket_todo_list.md  generate_pdf.sh
models/: fma_trained_model_balanced.pkl  ml_bucket_metrics.json
scripts/: apply_decisions.py  assign_buckets.py  auto_decide.py  auto_decide_rules.py  configure.py  find_duplicates.py  gui_config.py  install_essentia.py  install_essentia_cli.py  install_fpcalc.py  report_preview.py  scan_inbox.py  train_ml_from_fma.py  undo_last.py  validate_taxonomy.py
tests/: test_audio_basic.py  test_config_and_folders.py  test_li_scan_dryrun.py  test_simple_ml_features.py  (+1 more)
(+23 files in other folders)
