[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dj-library-manager"
version = "0.0.1"
description = "Local DJ library organizer (Rekordbox-friendly)"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["djlib*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
